tests/e2e/service_when_shorthand_arg_error2.story
http server as listen
    when listen listen :"path"
        a = 1
